Fix code showing behind line numbers

--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -99,8 +99,7 @@ pre {
 
 	.linenums {
 		position: absolute;
-		margin: 16px 0px 16px 12px;
-		padding-right: 8px;
+		padding: 16px 8px 16px 12px;
 		text-align: right;
 		color: #6b6b6b;
 		background-color: #2c2c2c;
